--- a/style.css
+++ b/style.css
@@ -574,38 +574,44 @@ header .albumcontainer .albums {
         width: 95%;
         min-width: unset;
         height: 65px;
-        padding: 0 8px;
+        padding: 0 5px;
         gap: 2px;
         flex-wrap: nowrap;
+        justify-content: flex-start;
     }
 
     header .master_play img {
-        width: 40px;
-        height: 40px;
+        width: 35px;
+        height: 35px;
+        margin-right: 3px;
     }
 
     header .master_play h5 {
-        font-size: 10px;
-        min-width: 60px;
-        max-width: 80px;
-        margin: 0 5px;
-    }
-
-    header .master_play .icon {
-        font-size: 18px;
-    }
-
-    header .master_play .icon i {
+        font-size: 9px;
+        min-width: 50px;
+        max-width: 65px;
         margin: 0 3px;
     }
 
+    header .master_play .icon {
+        font-size: 16px;
+        margin-right: 2px;
+    }
+
+    header .master_play .icon i {
+        margin: 0 2px;
+    }
+
     header .master_play span {
-        font-size: 10px;
+        font-size: 9px;
+        margin: 0 2px;
     }
 
     header .master_play .bar {
-        flex: 1;
-        min-width: 80px;
+        flex: 0 1 auto;
+        min-width: 60px;
+        max-width: 100px;
+        margin: 0 3px;
     }
 
     /* Hide volume controls on mobile */
@@ -624,6 +630,7 @@ header .albumcontainer .albums {
         flex-direction: column;
         gap: 2px;
         align-items: center;
+        margin-left: auto;
     }
 
     .mobile-player-buttons button {
